contrast fix #2

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,4 +33,4 @@ details[open] summary~* {
     }
 }
 
-.w3-codespan{background-color:#f3f3f3 }
+.w3-codespan{background-color:#f4f4f4 }
